--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Адаптивное навигационное меню</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+   <title>Flex test</title>
    <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -18,15 +19,63 @@
                   <span class="patriot">patriot</span>
                </div>
                <img class="img0" src="img/line.png" alt="">
-               <div class="menu">
-                  <li><a href="#">Услуги</a></li>
-                  <li> <a href="#">Продукция</a></li>
-                  <li><a href="#">Проекты</a></li>
-                  <li><a href="#">Компания</a></li>
-                  <div class="pin">
-                     <img src="img/svg/pin.svg" alt="">
-                     <span>Санкт-Петербург</span>
-                  </div>
+               <div class="menu" id="menu">
+                  <li class="has-submenu">
+                     <a href="#">Услуги &#9662;</a>
+                     <ul class="submenu">
+                        <li><a href="#">Управление активами и инвестиции</a></li>
+                        <li><a href="#">Автоматизация бизнеса </a></li>
+                        <li><a href="#">Финансовый аудит</a></li>
+                        <li><a href="#">Юридическая практика</a></li>
+                        <li><a href="#">Лизинг</a></li>
+                        <li><a href="#">Информационная безопасность</a></li>
+                     </ul>
+                  </li>
+                  <li class="has-submenu">
+                     <a href="#">Продукция &#9662;</a>
+                     <ul class="submenu">
+                        <li><a href="#">Управление активами и инвестиции</a></li>
+                        <li><a href="#">Автоматизация бизнеса </a></li>
+                        <li><a href="#">Финансовый аудит</a></li>
+                        <li><a href="#">Юридическая практика</a></li>
+                        <li><a href="#">Лизинг</a></li>
+                        <li><a href="#">Информационная безопасность</a></li>
+                     </ul>
+                  </li>
+                  <li class="has-submenu">
+                     <a href="#">Проекты &#9662;</a>
+                     <ul class="submenu">
+                        <li><a href="#">Управление активами и инвестиции</a></li>
+                        <li><a href="#">Автоматизация бизнеса </a></li>
+                        <li><a href="#">Финансовый аудит</a></li>
+                        <li><a href="#">Юридическая практика</a></li>
+                        <li><a href="#">Лизинг</a></li>
+                        <li><a href="#">Информационная безопасность</a></li>
+                     </ul>
+                  </li>
+                  <li class="has-submenu">
+                     <a href="#">Компания &#9662;</a>
+                     <ul class="submenu">
+                        <li><a href="#">Управление активами и инвестиции</a></li>
+                        <li><a href="#">Автоматизация бизнеса </a></li>
+                        <li><a href="#">Финансовый аудит</a></li>
+                        <li><a href="#">Юридическая практика</a></li>
+                        <li><a href="#">Лизинг</a></li>
+                        <li><a href="#">Информационная безопасность</a></li>
+                     </ul>
+                  </li>
+                  <li>
+                     <div class="pin">
+                        <img src="img/svg/pin.svg" alt="">
+                        <span>Санкт-Петербург</span>
+                     </div>
+                  </li>
+                  <li>
+                     <div class="tel1">
+                        <img src="img/svg/phone.svg" alt="">
+                        <span>+7 (800) 941-34-28</span>
+                     </div>
+                  </li>
                </div>
             </div>
             <div class="contacts">
@@ -70,26 +119,34 @@
                   </div>
                   <div class="flex-right">
                      <div class="form">
-
                         <h2>Оставить заявку</h2>
                         <p>Заполните форму и мы свяжемся с вами, чтобы узнать детали вашего проекта.</p>
-                        <form action="#" method="get">
-                           <div>
-                              <p>Имя*</p>
-                              <input type="text" id="name">
+                        <form action="php/index.php" method="get">
+                           <div class="media1024">
+                              <div>
+                                 <p>Имя*</p>
+                                 <input type="text" name="name">
+                              </div>
+                              <div>
+                                 <p>Телефон*</p>
+                                 <input type="number" name="phone">
+                              </div>
                            </div>
-                           <div>
-                              <p>Телефон*</p>
-                              <input type="number" id="phone">
+                           <div class="info">
+                              <div class="check">
+                                 <input type="checkbox">
+                                 <label>Я принимаю условия передачи информации</label>
+                              </div>
+                              <input type="submit" value="Связаться с нами">
                            </div>
-                           <div>
-                              <input type="checkbox" id="phone">
-                              <label for="phone">Я принимаю условия передачи информации</label>
-                           </div>
-                           <input type="submit" value="Связаться с нами">
                         </form>
                      </div>
                   </div>
+               </div>
+               <div class="pagination">
+                  <div class="circle"></div>
+                  <div class="circle"></div>
+                  <div class="circle"></div>
                </div>
             </div>
          </div>
@@ -97,135 +154,151 @@
       <div class="rate">
          <div class="wrapper">
             <div class="container">
-               <H3>Тарифы</H3>
+               <div class="rate-text">
+                  <h3>Тарифы</h3>
+                  <div class="slider_flex_rate">
+                     <div class="slider_rate"><img src="img/svg/Vector left.svg" alt=""></div>
+                     <div class="slider_rate"><img src="img/svg/Vector right.svg" alt=""></div>
+                  </div>
+               </div>
                <div class="card-flex">
-                  <div class="card">
-                     <div class="card-top">
-                        <span>Акция</span>
-                        <span>новинка</span>
-                        <span>хит</span>
-                        <p>Лайт</p>
-                     </div>
-                     <div class="card-text">
-                        <div class="visa">
-                           <p>Visa, Master Card, МИР</p>
-                           <p>3,7%</p>
+                  <div class="owl-carousel">
+                     <div class="card">
+                        <div class="card-top">
+                           <span>Акция</span>
+                           <span>новинка</span>
+                           <span>хит</span>
+                           <p>Лайт</p>
                         </div>
-                        <div class="visa">
-                           <p>Apple Pay, Android Pay</p>
-                           <p>3,7%</p>
-                        </div>
-                        <div class="visa">
-                           <p>Электронные кошельки</p>
-                           <p>3,7%</p>
-                        </div>
-                        <div class="visa">
-                           <p>Оборот</p>
-                           <p>от 0 до 200 т.р.</p>
-                        </div>
-                        <div class="visa">
-                           <p>120 000 ₽</p>
-                           <button>Оплатить</button>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="card">
-                     <div class="card-top">
-                        <span>Акция</span>
-                        <span>хит</span>
-                        <p>Лайт</p>
-                     </div>
-                     <div class="card-text">
-                        <div class="visa">
-                           <p>Visa, Master Card, МИР</p>
-                           <p>3,7%</p>
-                        </div>
-                        <div class="visa">
-                           <p>Apple Pay, Android Pay</p>
-                           <p>3,7%</p>
-                        </div>
-                        <div class="visa">
-                           <p>Электронные кошельки</p>
-                           <p>3,7%</p>
-                        </div>
-                        <div class="visa">
-                           <p>Оборот</p>
-                           <p>от 0 до 200 т.р.</p>
-                        </div>
-                        <div class="visa">
-                           <div class="sale">
-                              <p>120 000 ₽</p>
-                              <p>125 500 ₽</p>
+                        <div class="card-text">
+                           <div class="visa">
+                              <p>Visa, Master Card, МИР</p>
+                              <p>3,7%</p>
                            </div>
-                           <button>Оплатить</button>
+                           <div class="visa">
+                              <p>Apple Pay, Android Pay</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Электронные кошельки</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Оборот</p>
+                              <p>от 0 до 200 т.р.</p>
+                           </div>
+                           <div class="visa">
+                              <p>120 000 ₽</p>
+                              <button>Оплатить</button>
+                           </div>
                         </div>
                      </div>
-                  </div>
-                  <div class="card">
-                     <div class="card-top">
-                        <span>Акция</span>
-                        <span>новинка</span>
-                        <span>хит</span>
-                        <p>Лайт</p>
+                     <div class="card">
+                        <div class="card-top">
+                           <span>Акция</span>
+                           <span>хит</span>
+                           <p>Лайт</p>
+                        </div>
+                        <div class="card-text">
+                           <div class="visa">
+                              <p>Visa, Master Card, МИР</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Apple Pay, Android Pay</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Электронные кошельки</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Оборот</p>
+                              <p>от 0 до 200 т.р.</p>
+                           </div>
+                           <div class="visa">
+                              <div class="sale">
+                                 <p>120 000 ₽</p>
+                                 <p>125 500 ₽</p>
+                              </div>
+                              <button>Оплатить</button>
+                           </div>
+                        </div>
                      </div>
-                     <div class="card-text">
-                        <div class="visa">
-                           <p>Visa, Master Card, МИР</p>
-                           <p>3,7%</p>
+                     <div class="card">
+                        <div class="card-top">
+                           <span>Акция</span>
+                           <span>новинка</span>
+                           <span>хит</span>
+                           <p>Лайт</p>
                         </div>
-                        <div class="visa">
-                           <p>Apple Pay, Android Pay</p>
-                           <p>3,7%</p>
-                        </div>
-                        <div class="visa">
-                           <p>Электронные кошельки</p>
-                           <p>3,7%</p>
-                        </div>
-                        <div class="visa">
-                           <p>Оборот</p>
-                           <p>от 0 до 200 т.р.</p>
-                        </div>
-                        <div class="visa">
-                           <p>120 000 ₽</p>
-                           <button>Оплатить</button>
+                        <div class="card-text">
+                           <div class="visa">
+                              <p>Visa, Master Card, МИР</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Apple Pay, Android Pay</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Электронные кошельки</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Оборот</p>
+                              <p>от 0 до 200 т.р.</p>
+                           </div>
+                           <div class="visa">
+                              <p>120 000 ₽</p>
+                              <button>Оплатить</button>
+                           </div>
                         </div>
                      </div>
-                  </div>
-                  <div class="card">
-                     <div class="card-top">
-                        <span>Акция</span>
-                        <span>новинка</span>
-                        <span>хит</span>
-                        <p>Лайт</p>
-                     </div>
-                     <div class="card-text">
-                        <div class="visa">
-                           <p>Visa, Master Card, МИР</p>
-                           <p>3,7%</p>
+                     <div class="card">
+                        <div class="card-top">
+                           <span>Акция</span>
+                           <span>новинка</span>
+                           <span>хит</span>
+                           <p>Лайт</p>
                         </div>
-                        <div class="visa">
-                           <p>Apple Pay, Android Pay</p>
-                           <p>3,7%</p>
-                        </div>
-                        <div class="visa">
-                           <p>Электронные кошельки</p>
-                           <p>3,7%</p>
-                        </div>
-                        <div class="visa">
-                           <p>Оборот</p>
-                           <p>от 0 до 200 т.р.</p>
-                        </div>
-                        <div class="visa">
-                           <p>120 000 ₽</p>
-                           <button>Оплатить</button>
+                        <div class="card-text">
+                           <div class="visa">
+                              <p>Visa, Master Card, МИР</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Apple Pay, Android Pay</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Электронные кошельки</p>
+                              <p>3,7%</p>
+                           </div>
+                           <div class="visa">
+                              <p>Оборот</p>
+                              <p>от 0 до 200 т.р.</p>
+                           </div>
+                           <div class="visa">
+                              <p>120 000 ₽</p>
+                              <button>Оплатить</button>
+                           </div>
                         </div>
                      </div>
                   </div>
                </div>
+               <div class="pagination">
+                  <div class="circle"></div>
+                  <div class="circle"></div>
+                  <div class="circle"></div>
+               </div>
             </div>
+
          </div>
       </div>
    </main>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
    <script src="js/script.js"></script>
 </body>
 
